--- a/electron/package.json
+++ b/electron/package.json
@@ -62,7 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^8.55.0",
     "@typescript-eslint/parser": "^8.55.0",
     "electron": "40.1.0",
-    "electron-builder": "26.7.0",
+    "electron-builder": "^26.8.1",
     "eslint": "^9.39.2",
     "typescript": "^5.3.0"
   },
